recotable title overflow fixed

--- a/src/main/resources/static/index.css
+++ b/src/main/resources/static/index.css
@@ -64,6 +64,10 @@ display:block;
     font-weight: bold;
 }
 
+.text-center {
+    word-wrap: break-word;
+}
+
 .center {
     display: block;
     position:absolute;
@@ -176,6 +180,7 @@ table.recoTable {
   margin-top: 100px;
   margin-left: auto;
   margin-right: auto;
+  table-layout: fixed
 }
 table.recoTable td, table.recoTable th {
   padding: 5px 10px;
